--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/malpercio/data-holder/issues"
   },
-  "homepage": "https://github.com/malpercio/data-holder#readme"
+  "homepage": "https://github.com/malpercio/data-holder#readme",
+  "devDependencies": {
+    "faker": "^3.1.0",
+    "mocha": "^3.2.0"
+  }
 }
